@@ -456,6 +456,10 @@ exports.setIndexSettings = (index, options, cb) => {
   );
 };
 
+exports.clearCache = (cb) => {
+  return internals.elasticSearchClient.indices.clearCache({}, cb);
+}
+
 exports.shards = function (cb) {
   return internals.elasticSearchClient.cat.shards({ format: 'json', bytes: 'b', h: 'index,shard,prirep,state,docs,store,ip,node,ur,uf,fm,sm' }, cb);
 };
