@@ -3898,6 +3898,16 @@ app.post('/esadmin/unflood', [noCacheJson, recordResponseTime, checkEsAdminUser,
   return res.send(JSON.stringify({ success: true, text: 'Unflood' }));
 });
 
+app.post('/esadmin/clearCache', [noCacheJson, recordResponseTime, checkEsAdminUser, checkCookieToken], (req, res) => {
+  Db.clearCache((err, data) => {
+    if (err) {
+      return res.send(JSON.stringify({ success: false, text: 'Cache clear failed' }));
+    } else {
+      return res.send(JSON.stringify({ success: true, text: `Cache cleared: ${data._shards.successful} of ${data._shards.total} shards successful, with ${data._shards.failed} failing`}));
+    }
+  });
+});
+
 app.get('/esshard/list', [noCacheJson, recordResponseTime, checkPermissions(['hideStats']), setCookie], (req, res) => {
   Promise.all([
     Db.shards(),
